<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home_text"
        app:showAsAction="ifRoom" />
    <item android:title="@string/curry_text" >
        <menu >
            <item android:title="@string/greencurry_text" />
            <item android:title="@string/tamoricurry_text" />
            <item android:title="@string/beefcurry_text" />
            <item android:title="@string/katsucurry_text" />
        </menu>
    </item>
    <item android:title="@string/noodle_text" >
        <menu >
            <item android:title="@string/udon_text" />
            <item android:title="@string/nabeyaki_text" />
            <item android:title="@string/ramen2_text" />
            <item android:title="@string/soba2_text" />
            <item android:title="@string/soba1_text" />
            <item android:title="@string/ramen1_text" />
            <item android:title="@string/hiyashi_text" />
        </menu>
    </item>
    <item android:title="@string/stew_text" >
        <menu >
            <item android:title="@string/osyarenabe_text" />
            <item android:title="@string/oden_text" />
        </menu>
    </item>
    <item android:title="@string/etc_text" >
        <menu >
            <item android:title="@string/baigai_text" />
            <item android:title="@string/ankake_text" />
            <item android:title="@string/hayashi_text" />
            <item android:title="@string/hiroshima_text" />
            <item android:title="@string/peperoncino_text" />
            <item android:title="@string/beefobowl_text" />
        </menu>
    </item>
</menu>